<resources>
    <string name="app_name">Court Counter</string>
    <string name="heading_txt">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="score">0</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
</resources>
