<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                android:src="@drawable/background_image" />

            <LinearLayout
                android:id="@+id/main_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/layout_width_zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@color/colorBlue"
                        android:gravity="center"
                        android:padding="@dimen/padding_small"
                        android:text="@string/team_a"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_textview"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/team_a_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_scoreTextview"
                            android:layout_marginTop="@dimen/margin_scoreTextview"
                            android:background="@drawable/shape_circle"
                            android:gravity="center"
                            android:padding="@dimen/padding_small"
                            android:text="@string/score"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_large" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:background="@color/colorYellow"
                        android:onClick="addThreeForTeamA"
                        android:text="@string/three_points"
                        android:textColor="@color/colorBlackGrey"
                        android:textSize="@dimen/text_button" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_medium"
                        android:background="@color/colorYellow"
                        android:onClick="addTowForTeamA"
                        android:text="@string/two_points"
                        android:textColor="@color/colorBlackGrey"
                        android:textSize="@dimen/text_button" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:background="@color/colorYellow"
                        android:onClick="addOneForTeamA"
                        android:text="@string/free_throw"
                        android:textColor="@color/colorBlackGrey"
                        android:textSize="@dimen/text_button" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/width_line"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/colorBlack" />

                <LinearLayout
                    android:layout_width="@dimen/layout_width_zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@color/colorBlue"
                        android:gravity="center"
                        android:padding="@dimen/padding_small"
                        android:text="@string/team_b"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_textview"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/team_b_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_scoreTextview"
                            android:layout_marginTop="@dimen/margin_scoreTextview"
                            android:background="@drawable/shape_circle"
                            android:gravity="center"
                            android:padding="@dimen/padding_small"
                            android:text="@string/score"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_large" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:background="@color/colorYellow"
                        android:onClick="addThreeForTeamB"
                        android:text="@string/three_points"
                        android:textColor="@color/colorBlackGrey"
                        android:textSize="@dimen/text_button" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_medium"
                        android:background="@color/colorYellow"
                        android:onClick="addTowForTeamB"
                        android:text="@string/two_points"
                        android:textColor="@color/colorBlackGrey"
                        android:textSize="@dimen/text_button" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:background="@color/colorYellow"
                        android:onClick="addOneForTeamB"
                        android:text="@string/free_throw"
                        android:textColor="@color/colorBlackGrey"
                        android:textSize="@dimen/text_button" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_view"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/btn_reset_margin"
                android:layout_marginTop="@dimen/btn_reset_margin"
                android:background="@color/colorBlue"
                android:onClick="resetscore"
                android:text="@string/reset"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_button" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>